--- a/css/about.css
+++ b/css/about.css
@@ -19,14 +19,14 @@ img{
   flex-direction: column;
   align-items: center;
 }
-h1{
+.about-me> h1{
   margin-top: 50px;
   margin-bottom: 0;
   font-family: 'Monofett', monospace;
   font-size: 50px;
   color: rgb(243, 129, 129);
 }
-p{
+.about-me> p{
   width: 350px;
   font-size: 18px;
   text-align: center;
