--- a/css/projects.css
+++ b/css/projects.css
@@ -17,6 +17,8 @@
   width: 360px;
   margin-bottom: 50px;
   text-align: center;
+  border-radius: 7px;
+  height: fit-content;
 }
 .bamm, .levelup-site, .blackjack, .showcase{
   width: 100%;
@@ -33,11 +35,14 @@
 .project-description{
   padding: 0 15px;
   margin-top: 0;
+  margin-bottom: 30px;
 }
-/* .text{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: inherit;
-  background-color: red;
-} */
+.github-link, .deployed-link{
+  border: 2px solid rgb(229, 192, 60);
+  border-radius: 7px;
+  padding: 10px;
+  margin: 0 5px;
+}
+.links{
+  margin-bottom: 30px;
+}
