--- a/css/about.css
+++ b/css/about.css
@@ -1,12 +1,19 @@
+body{
+  display: flex;
+  justify-content: center;
+  vertical-align: middle;
+  overflow: hidden;
+}
 main{
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  vertical-align: middle;
 }
 .pic-container{
   display: flex;
   justify-content: center;
-  margin-top: 80px;
 }
 img{
   width:300px;
