add backgrounds to each page

--- a/css/about.css
+++ b/css/about.css
@@ -3,6 +3,10 @@ body{
   justify-content: center;
   vertical-align: middle;
   overflow: hidden;
+  background-image: url(/assets/images/background-about-full.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 main{
   display: flex;
@@ -37,4 +41,12 @@ img{
   width: 350px;
   font-size: 18px;
   text-align: center;
+}
+@media (max-width: 875px) {
+  body{
+    background-image: url(/assets/images/background-about-half.png);
+    background-repeat: no-repeat;
+    background-size:cover;
+    background-position: center;
+  }
 }
