--- a/css/home.css
+++ b/css/home.css
@@ -2,11 +2,12 @@ html,
 body {
   width: 100%;
   height: 100%;
+  margin: 0;
   font-family: 'Gruppo', sans-serif;
   font-weight: 900;
-  /* background-image: url(/assets/images/background.jpeg); */
-  /* background-repeat: no-repeat; */
-  /* background-size: cover; */
+  background-image: url(/assets/images/background-home-full.png);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 body{
   display: flex;
@@ -89,4 +90,12 @@ a, a:visited{
 }
 #about:active, #projects:active, #resume:active, #contact:active{
   box-shadow: none;
+}
+@media (max-width: 875px) {
+  body{
+    background-image: url(/assets/images/background-home.png);
+    background-repeat: no-repeat;
+    background-size:cover;
+    background-position: center;
+  }
 }
