--- a/css/projects.css
+++ b/css/projects.css
@@ -1,3 +1,13 @@
+body{
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  background-image: url(/assets/images/background-projects-full.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  /* background-position: center; */
+}
 .projects-header{
   font-family: 'Monofett', monospace;
   font-size: 50px;
@@ -45,4 +55,12 @@
 }
 .links{
   margin-bottom: 30px;
+}
+@media (max-width: 700px) {
+  body{
+    background-image: url(/assets/images/background-projects-half.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+  }
 }
