--- a/css/contact.css
+++ b/css/contact.css
@@ -48,6 +48,8 @@ input[type=submit] {
   cursor: pointer;
   margin: 0 auto;
   width: 200px;
+  font-family: 'Gruppo', sans-serif;
+  font-size: 16px;
 }
 
 /* When moving the mouse over the submit button, add a darker green color */
