--- a/css/projects.css
+++ b/css/projects.css
@@ -6,7 +6,6 @@ body{
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
-  /* background-position: center; */
 }
 .projects-header{
   font-family: 'Monofett', monospace;
@@ -21,6 +20,10 @@ body{
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
+}
+.projects{
+  border-bottom: 2px solid rgb(252, 227, 138);
+  padding-bottom: 5px;
 }
 .project{
   border: 2px solid rgb(229, 192, 60);
@@ -59,8 +62,5 @@ body{
 @media (max-width: 700px) {
   body{
     background-image: url(/assets/images/background-projects-half.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
   }
 }
