--- a/css/nav.css
+++ b/css/nav.css
@@ -14,7 +14,9 @@ body {
   border-bottom: 0.5px solid rgb(201, 201, 201);
   position: fixed;
   z-index: 1;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.6);
+  -webkit-backdrop-filter: blur(4px);
+  backdrop-filter: blur(4px);
 }
 .nav-bar-hamburger{
   display: none;
@@ -82,7 +84,9 @@ a, a:visited{
     border-bottom: 0.5px solid rgb(201, 201, 201);
     position: fixed;
     z-index: 1;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.6);
+    -webkit-backdrop-filter: blur(4px);
+    backdrop-filter: blur(4px);
   }
   .navbar-reg{
     display: none;
@@ -117,6 +121,7 @@ a, a:visited{
   .hamburger-menu-links{
     display: none;
     margin: 0 auto;
+    padding: 0;
     margin-bottom: 10px;
   }
   .hamburger-menu-links>li{
