--- a/css/projects.css
+++ b/css/projects.css
@@ -32,6 +32,9 @@ body{
   text-align: center;
   border-radius: 7px;
   height: fit-content;
+  background-color: rgba(255, 255, 255, 0.2);
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
 }
 .bamm, .levelup-site, .blackjack, .showcase{
   width: 100%;
