--- a/css/projects.css
+++ b/css/projects.css
@@ -36,7 +36,7 @@ body{
   -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
 }
-.bamm, .levelup-site, .blackjack, .showcase{
+.bamm, .levelup-site, .blackjack, .showcase, .portfolio{
   width: 100%;
 }
 .levelup-logo{
