--- a/css/resume.css
+++ b/css/resume.css
@@ -1,14 +1,15 @@
 body{
-  display: flex;
-  justify-content: center;
-  vertical-align: middle;
-  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  margin: 0;
   background-image: url(/assets/images/background-resume-full.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
 }
 main{
+  margin-top: 0;
+  padding-top: 60px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -31,6 +32,18 @@ main{
 .resume-description{
   text-align: center;
   width: 250px;
+}
+.language{
+  width: 100px;
+  height: 120px;
+  object-fit: contain;
+  margin: 10px;
+}
+.languages{
+  width: 500px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 @media (max-width: 700px) {
   body{
