--- a/css/about.css
+++ b/css/about.css
@@ -18,16 +18,20 @@ main{
   align-items: center;
   justify-content: center;
   vertical-align: middle;
+  width: 100%;
 }
 .pic-container{
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
+  width: 100%;
 }
 img{
-  width:300px;
-  height: 300px;
+  width: 400px;
+  height: 400px;
   object-position: top;
   object-fit: cover;
+  border: 4px solid rgb(243, 129, 129);
+  border-radius: 25px;
 }
 .about-me{
   display: flex;
@@ -46,12 +50,36 @@ img{
   font-size: 18px;
   text-align: center;
 }
+@media (max-width: 1320px) {
+  img{
+    width: 300px;
+    height: 300px;
+  }
+}
+@media (max-width: 1000px) {
+  img{
+    width: 250px;
+    height: 250px;
+  }
+}
 @media (max-width: 875px) {
   body{
     background-image: url(/assets/images/background-about-half.png);
     background-repeat: no-repeat;
     background-size:cover;
     background-position: center;
+  }
+}
+@media (max-width: 820px) {
+  img{
+    width: 200px;
+    height: 200px;
+  }
+}
+@media (max-width: 650px) {
+  img{
+    width: 160px;
+    height: 160px;
   }
 }
 @media (max-width: 550px){
@@ -63,7 +91,7 @@ img{
     font-size: 14px;
   }
   img{
-    width: 160px;
-    height: 160px;
+    width: 130px;
+    height: 130px;
   }
 }
