--- a/css/projects.css
+++ b/css/projects.css
@@ -7,6 +7,11 @@ body{
   background-size: cover;
   background-attachment: fixed;
 }
+main{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .projects-header{
   font-family: 'Monofett', monospace;
   font-size: 50px;
@@ -20,6 +25,7 @@ body{
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
+  width: 90%;
 }
 .projects{
   border-bottom: 2px solid rgb(252, 227, 138);
@@ -28,58 +34,69 @@ body{
 .project{
   border: 2px solid rgb(229, 192, 60);
   width: 360px;
+  min-height: 600px;
   margin-bottom: 50px;
-  text-align: center;
   border-radius: 7px;
-  height: fit-content;
   background-color: rgba(255, 255, 255, 0.2);
   -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
+  display: flex;
+  flex-direction: column;
+  text-align: center;
 }
-.bamm, .levelup-site, .blackjack, .showcase, .portfolio{
+.bamm, .level-up, .blackjack, .showcase, .portfolio{
   width: 100%;
+  height: 60%;
+}
+.description{
+  height: 40%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 .bamm{
   background-image: url(/assets/images/bamm.png);
-  width: 100%;
-  height: 300px;
+  /* width: 100%; */
+  /* height: 300px; */
   background-size: cover;
   background-repeat: no-repeat;
 }
 .level-up{
   background-image: url(/assets/images/levelup-site.png);
-  width: 100%;
-  background-size: cover;
+  /* width: 100%; */
+  background-size: contain;
+  background-position: center;
   background-repeat: no-repeat;
-  height: 200px;
+  /* height: 200px; */
 }
 .blackjack{
   background-image: url(/assets/images/blackjack.png);
-  width: 100%;
+  /* width: 100%; */
   background-size: cover;
   background-repeat: no-repeat;
-  height: 350px;
+  /* height: 350px; */
 }
 .showcase{
   background-image: url(/assets/images/showcase.png);
-  width: 100%;
+  /* width: 100%; */
   background-size: cover;
   background-repeat: no-repeat;
-  height: 293px;
+  background-position: center;
+  /* height: 293px; */
 }
 .portfolio{
   background-image: url(/assets/images/portfolio.png);
-  width: 100%;
+  /* width: 100%; */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  height: 300px;
+  /* height: 300px; */
 }
 .built{
   opacity: 0;
   transition: opacity .4s;
   margin: 0;
-  height: inherit;
+  height: 100%;
   width: 100%;
   display: flex;
   justify-content: center;
