--- a/css/about.css
+++ b/css/about.css
@@ -25,7 +25,7 @@ main{
   justify-content: space-evenly;
   width: 100%;
 }
-img{
+.pic-container > img{
   width: 400px;
   height: 400px;
   object-position: top;
@@ -35,7 +35,7 @@ img{
 }
 .about-me{
   display: flex;
-  flex-direction: column;
+  flex-direction: column; 
   align-items: center;
 }
 .about-me> h1{
@@ -51,13 +51,13 @@ img{
   text-align: center;
 }
 @media (max-width: 1320px) {
-  img{
+  .pic-container > img{
     width: 300px;
     height: 300px;
   }
 }
 @media (max-width: 1000px) {
-  img{
+  .pic-container > img{
     width: 250px;
     height: 250px;
   }
@@ -71,13 +71,13 @@ img{
   }
 }
 @media (max-width: 820px) {
-  img{
+  .pic-container > img{
     width: 200px;
     height: 200px;
   }
 }
 @media (max-width: 650px) {
-  img{
+  .pic-container > img{
     width: 160px;
     height: 160px;
   }
@@ -90,7 +90,7 @@ img{
     width: 260px;
     font-size: 14px;
   }
-  img{
+  .pic-container > img{
     width: 130px;
     height: 130px;
   }
