--- a/css/nav.css
+++ b/css/nav.css
@@ -67,12 +67,16 @@ a, a:visited{
   border-bottom: 2px solid rgb(252, 227, 138);
   padding-bottom: 5px;
 }
-.resume:hover{
+/* .resume:hover{
   border-bottom: 2px solid rgb(162, 193, 125);
   padding-bottom: 5px;
 }
 .contact:hover{
   border-bottom: 2px solid rgb(149, 225, 211);
+  padding-bottom: 5px;
+} */
+.connect:hover{
+  border-bottom: 2px solid rgb(162, 193, 125);
   padding-bottom: 5px;
 }
 @media (max-width: 765px) {
