--- a/css/connect.css
+++ b/css/connect.css
@@ -32,13 +32,14 @@ main{
 }
 
 @media (max-width: 619px) {
-  .form-container{
-    width: 300px;
-  }
   body{
     background-image: url(/assets/images/background-contact-half.png);
   }
-  .contact-title{
+  .connect-title{
     font-size: 35px;
+  }
+  .connect-icon img{
+    width: 50px;
+    margin: 10px;
   }
 }
