--- a/css/home.css
+++ b/css/home.css
@@ -64,10 +64,6 @@ a, a:visited{
   background-color: rgb(252, 227, 138);
   border: 1px solid rgb(230, 182, 10);
 }
-/* #resume{
-  background-color: rgb(217, 242, 186);
-  border: 1px solid rgb(151, 206, 83);
-}
 #contact{
   background-color: rgb(149, 225, 211);
   border: 1px solid rgb(66, 171, 152);
@@ -76,7 +72,7 @@ a, a:visited{
   background-color: rgb(217, 242, 186);
   border: 1px solid rgb(151, 206, 83);
 }
-#about:hover, #projects:hover, #connct:hover, :hover, #contact:hover{
+#about:hover, #projects:hover, #connct:hover, #contact:hover{
   cursor: pointer;
 }
 #about:hover{
